--- a/index.html
+++ b/index.html
@@ -14,22 +14,19 @@
 <body>
 
     <div class="container">
-        <video id="video1" class="video" src="assets/NASCER DO SOL _ NEVOEIRO _ PAISAGEM _ - (Vídeo Livre de Direitos Autorais).mp4" poster="./assets/planodefundo.png">
+        <video id="video1" class="video"
+            src="assets/NASCER DO SOL _ NEVOEIRO _ PAISAGEM _ - (Vídeo Livre de Direitos Autorais).mp4"
+            poster="./assets/planodefundo.png">
         </video>
 
         <div class="controle">
 
-            <img id="play" class="btn" onclick="play()" onmouseout="esconda()"
-                src="assets/botoes/icons8-play-dentro-de-um-círculo-50.png">
-            <img class="btn" onclick="stop()" onmouseout="esconda()" src="assets/botoes/icons8-stop-circled-50.png">
-            <img class="btn" onclick="retroceder()" onmouseout="esconda()"
-                src="assets/botoes/icons8-repetição-de-10-50.png">
-            <img class="btn" onclick="avancar()" onmouseout="esconda()"
-                src="assets/botoes/icons8-10-para-a-frente-50.png">
-            <img class="btn" onclick="diminuirV()" onmouseout="esconda()"
-                src="assets/botoes/icons8-rewind-button-round-50.png">
-            <img class="btn" onclick="aumentarV()" onmouseout="esconda()"
-                src="assets/botoes//icons8-rodada-de-avanço-rápido-50.png">
+            <img id="play" class="btn" onclick="play()" src="assets/botoes/icons8-play-dentro-de-um-círculo-50.png">
+            <img class="btn" onclick="stop()" src="assets/botoes/icons8-stop-circled-50.png">
+            <img class="btn" onclick="retroceder()" src="assets/botoes/icons8-repetição-de-10-50.png">
+            <img class="btn" onclick="avancar()" src="assets/botoes/icons8-10-para-a-frente-50.png">
+            <img class="btn" onclick="diminuirV()" src="assets/botoes/icons8-rewind-button-round-50.png">
+            <img class="btn" onclick="aumentarV()" src="assets/botoes//icons8-rodada-de-avanço-rápido-50.png">
 
         </div>
 
